# litelocale

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
